Nuevo repositorio entrega 2

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Simulador de Alta, Baja, Modificación y Consultas de productos de TuTienda.Com</h1>
-    <h2>Acceso</h2>
+    <h2>Acceso:</h2>
     <ul>
         <li><strong>Usuario:</strong>  coderuser</li>
         <li><strong>Password:</strong>  1234</li>
